RESOLVED FIXED82667
shape-inside and shape-outside are not in the list of computed style properties
https://bugs.webkit.org/show_bug.cgi?id=82667
Summary shape-inside and shape-outside are not in the list of computed style properties
Bear Travis
Reported 2012-03-29 15:13:13 PDT
The style declaration result of getComputedProperties does not contain -webkit-shape-inside and -webkit-shape-outside These constants need to be added to CSSComputedStyleDeclaration::computedProperties Split from 82365
Attachments
proposed patch adding computed properties (18.30 KB, patch)
2012-03-30 10:23 PDT, Bear Travis
no flags
updated patch (18.84 KB, patch)
2012-03-30 15:36 PDT, Bear Travis
no flags
Bear Travis
Comment 1 2012-03-30 10:23:19 PDT
Created attachment 134836 [details] proposed patch adding computed properties Adding -webkit-shape-inside and -webkit-shape-outside to the list of computed properties returned by getComputedStyle.
Andreas Kling
Comment 2 2012-03-30 14:24:26 PDT
Comment on attachment 134836 [details] proposed patch adding computed properties View in context: https://bugs.webkit.org/attachment.cgi?id=134836&action=review > Source/WebCore/css/CSSComputedStyleDeclaration.cpp:318 > + CSSPropertyWebkitShapeInside, > + CSSPropertyWebkitShapeOutside Shouldn't this list be in alphabetical order?
Bear Travis
Comment 3 2012-03-30 15:36:31 PDT
Created attachment 134901 [details] updated patch adding properties in alphabetical order
WebKit Review Bot
Comment 4 2012-03-30 17:46:22 PDT
Comment on attachment 134901 [details] updated patch Clearing flags on attachment: 134901 Committed r112755: <http://trac.webkit.org/changeset/112755>
WebKit Review Bot
Comment 5 2012-03-30 17:46:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.