shape-inside and shape-outside are not in the list of computed style properties https://bugs.webkit.org/show_bug.cgi?id=82667

Patch by Bear Travis <betravis@adobe.com> on 2012-03-30
Reviewed by Ryosuke Niwa.

Source/WebCore:

Adding prefixed shape-inside and shape-outside to the list of computed style properties.
Added properties to existing tests for computed style results

* css/CSSComputedStyleDeclaration.cpp:
(WebCore): added -webkit-shape-inside and -webkit-shape-outside to computedProperties

LayoutTests:

Adding prefixed shape-inside and shape-outside to the list of computed style properties.
Updating tests that look at all properties on a computed style declaration.

* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/chromium-mac-snowleopard/svg/css/getComputedStyle-basic-expected.txt:
* platform/chromium-mac/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/chromium-mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/chromium-win/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/chromium-win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/chromium-win/svg/css/getComputedStyle-basic-expected.txt:
* platform/efl/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/gtk/svg/css/getComputedStyle-basic-expected.txt:
* platform/mac/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/qt/svg/css/getComputedStyle-basic-expected.txt:
* svg/css/getComputedStyle-basic-expected.txt:

Canonical link: https://commits.webkit.org/100131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112755 268f45cc-cd09-0410-ab3c-d52691b4dbfc