Source/WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -280,6 +280,8 @@ static const int computedProperties[] = {
     CSSPropertyWebkitPerspectiveOrigin,
     CSSPropertyWebkitPrintColorAdjust,
     CSSPropertyWebkitRtlOrdering,
+    CSSPropertyWebkitShapeInside,
+    CSSPropertyWebkitShapeOutside,
 #if ENABLE(TOUCH_EVENTS)
     CSSPropertyWebkitTapHighlightColor,
 #endif
